# data_contract

./: DOMAIN_NOTES.md  demo_complete.sh  interim_report.md  main.py  pyproject.toml  requirements.txt  run_complete.py  run_withregister.sh
contract_registry/: consumers.json  enforcement_policies.json  registry.json
contracts/: __init__.py  ai_extensions.py  attributor.py  generator.py  registry.py  report_generator.py  runner.py  schema_analyzer.py
enforcer_report/: report_20260403.json  report_data.json
generated_contracts/: extraction_ledger_contract.json  extraction_ledger_contract.yaml  extraction_ledger_dbt.yml  extractions_contract.yaml  lineage_graph_contract.json  lineage_graph_contract.yaml  week3_extractions.json  week3_extractions.yaml  week3_extractions_contract.yaml  week3_extractions_dbt.yml  week5_events.yaml
schema_snapshots/: baseline.json  baseline_20250301.json  current_20260404.json  current_20260404_170042.json  extraction_ledger-contract_baseline.json  extraction_ledger_baseline.json  week3_20250301.json  week3_20250401.json
scripts/: create_violation_log.py  inject_violations.py
validation_reports/: ai_metrics.json  schema_evolution.json  schema_evolution_report.json  validation_20260401_173020.json  validation_20260401_173336.json  validation_20260401_174936.json  validation_20260401_221653.json  validation_20260401_234757.json  validation_20260403_175131.json  validation_20260403_185015.json  validation_20260404_155429.json  validation_20260404_160713.json  validation_20260404_161523.json  validation_20260404_162247.json  (+4 more)
(+9 files in other folders)
