[project]
name = "data-contract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.7",
    "gitpython==3.1.41",
    "jsonschema==4.19.2",
    "networkx==3.1",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "ydata-profiling>=4.17.0",
]
